--- a/www/index.html
+++ b/www/index.html
@@ -306,7 +306,7 @@
 			
 			<br /><br />
 			
-			<a href="#dental_visit" data-role="button" onclick="alert('This form should be filled by your dentist after dental examination')">Visit to dentist</a>
+			<a href="#dental_visit" data-role="button" onclick="alert('For dental professionals only! Do not use these features without consultation with your dental care provider.')">Visit to dentist</a>
 
 		
 
@@ -454,6 +454,8 @@
 					<li><a href="#risk_factors">Risk factors</a></li>
 					<li><a href="#protective_factors">Protective factors</a></li>
 			</ul>
+			<br />
+			<p class="redWhite">*Based on Caries Risk Assessment Form for Children Age 6 and Over/Adults.<br /> CAMBRA for Dental Providers (0-5) Assessment Tool is not included in this app.</p>
 		
 		</div>
 		
@@ -1241,10 +1243,11 @@
 		
 		
 		<div data-role="content" data-theme="a">
-		
-			<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
-			<h4>IntacTooth - keeping your teeth and gums healthy</h4>
-			<hr />
+			<div class="info_naslov">
+				<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
+				<h4>IntacTooth - keeping your teeth and gums healthy</h4>
+			</div>					
+			
 			<p>The IntacTooth app will help you keep your teeth and gums healthy.</p>
 			<p>This is accomplished by teaching you about prevention of dental caries and gum disease, and by enabling you to track your own behavior related to it.</p>
 			<p>The app has a built-in tracking system consisting of registration buttons and indicators. The purpose of this system is to enable you to track your own adherence to the preventive regimen. Eventually you will incorporate new knowledge and habits and this app will no longer be necessary.</p>
@@ -1273,10 +1276,11 @@
 		
 		
 		<div data-role="content" data-theme="a">
+			<div class="info_naslov">
+				<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
+				<h4>Dental caries and gum disease prevention</h4>
+			</div>				
 		
-			<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
-			<h4>Dental caries and gum disease prevention</h4>
-			<hr />
 			<p>Both diseases have multifaceted causes and explaining everything is beyond the scope of these instructions.We do strongly recommend that you use the resources we have provided to learn more.</p>
 			<p>Terms:</p>
 			<ol>
@@ -1325,10 +1329,11 @@
 		
 		
 		<div data-role="content" data-theme="a">
-		
-			<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
-			<h4>Caries Management By Risk Assessment</h4>
-			<hr />
+			<div class="info_naslov">
+				<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
+				<h4>Caries Management By Risk Assessment</h4>
+			</div>			
+			
 			<p>One of the goals of this app is to make you aware of two things:</p>
 			<ol>
 			<li>Dental caries is a preventable disease. If you strictly follow  certain guidelines, depending on the situation, you may never again have new cavities.</li>
@@ -1364,10 +1369,11 @@
 		
 		
 		<div data-role="content" data-theme="a">
-		
-			<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
-			<h4>Application interface</h4><br />
-			<hr />
+			<div class="info_naslov">
+				<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
+				<h4>Application interface</h4>
+			</div>		
+			
 			<p><strong>Home screen</strong></p>
 			<p>Home screen consists of following parts (from top to bottom):</p>
 			<ol>
@@ -1393,7 +1399,7 @@
 			<p>This section should be filled by dentist after a clinical examination, eventual therapeutic procedures and decision which therapeutic agents should be prescribed to the patient.</p>
 			<ol>
 			<li><p>General data</p><p>Name, gender and age of patient.</p></li>
-			<li><p>Current status</p><p>Clinical findings related to dental caries ( disease indicators, risk and protective factors). &nbsp;If dental office is not equipped for conducting specific tests ( Streptococcus mutans or lactobacillus count, saliva tests etc) - fields for those tests should be left blank.</p><p>After entering these data the app will calculate the caries risk level for the patient and show it on the home screen. All three forms must be submitted or caries risk will not be calculated.</p></li>
+			<li><p>Current status</p><p>Clinical findings related to dental caries ( disease indicators, risk and protective factors). If dental office is not equipped for conducting specific tests ( Streptococcus mutans or lactobacillus count, saliva tests etc) - fields for those tests should be left blank.</p><p>After entering these data the app will calculate the caries risk level for the patient and show it on the home screen. All three forms must be submitted or caries risk will not be calculated.</p><p>Caries risk level is calculated after this formula: <br />If any disease indicator is present - HIGH LEVEL.<br />If any disease indicator is present AND saliva flow is compromized - EXTREME LEVEL.<br />There are no disease indicators, greater number of risk factors than number of protective factors - HIGH RISK.<br />There are no disease indicators, equal number of risk and protective factors - MODERATE RISK.<br />There are no disease indicators, smaller number of risk factors than protective factors - LOW RISK.</p></li>
 			<li><p>Recommendations</p><p>This section has 3 parts:</p><p>A place to enter date of next appointment. It will appear on the home screen as a reminder.</p><p>List of therapeutics used in Caries Management By Risk Assessment protocol. Generic names and usage regimens are hard coded according to CAMBRA recommendations.</p><p>This is the section for prescriptions other than those listed under CAMBRA section. Tap "enter new" to enter name, directions and regimen (strict daily and monthly usage or when needed).</p><p>Entering the prescribed agents here will enable tracking - register buttons will appear on home screen. Prescriptions with "as needed" regimen are not tracked. Toothpaste usage (standard or therapeutic) is tracked together with brushing and does not have a separate register button.</p></li>
 			</ol>
 
@@ -1423,9 +1429,10 @@
 		
 		<div data-role="content" data-theme="a">
 		
-			<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
-			<h4>Goal of the game</h4><br />
-			<hr />
+			<div class="info_naslov">
+				<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
+				<h4>Goal of the game</h4>
+			</div>
 			<p>Goal of the game: keep all indicators green.</p>
 			<p>There are several indicators inside the app:</p>
 			<p><strong>Snack counter.</strong> Value changes when snack button is pressed. It will be reset to zero on the beginning of each new day. The indicator will remain green until snack button is pressed more than 3 times in a single day. After that it becomes red.<br />You should press snack button every time you take food containing fermentable carbohydrates (glucose, sucrose, fructose and cooked starch). &nbsp;This way you will become aware of your eating habits and hopefully modify it if it is damaging to your teeth.</p>
@@ -1454,14 +1461,17 @@
 		
 		
 		<div data-role="content" data-theme="a">
-		
-			<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
-			<h4>Resources</h4><br />
-			<hr />
+			<div class="info_naslov">
+				<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
+				<h4>Resources</h4>
+			</div>			
 			<p><a href='#' onclick="navigator.app.loadUrl('http://en.m.wikipedia.org/wiki/Dental_caries', { openExternal:true });">Wikipedia article about dental caries</a></p>
 			<p><a href='#' onclick="navigator.app.loadUrl('http://www.dentalhealth.org/tell-me-about/topic/mouth-conditions/dental-decay', { openExternal:true });">Dental health article about dental caries</a></p>
 			<p><a href='#' onclick="navigator.app.loadUrl('http://www.dentalhealth.org/tell-me-about/topic/gum-disease/gum-disease', { openExternal:true });">Dental health article about gum disease</a></p>
-			<p><a href='#' onclick="navigator.app.loadUrl('http://www.mouthhealthy.org/en/az-topics/b/brushing-your-teeth', { openExternal:true });"> mouthhealthy.org article about brushing and flossing</a></p>
+			<p><a href='#' onclick="navigator.app.loadUrl('http://carifree.com/dentist/learn/by-topic/cambra.html', { openExternal:true });">CariFree article about gum disease</a></p>
+			<p><a href='#' onclick="navigator.app.loadUrl('http://www.mouthhealthy.org/en/az-topics/b/brushing-your-teeth', { openExternal:true });"> Mouthhealthy.org article about brushing and flossing</a></p>
+			<p><a href='#' onclick="navigator.app.loadUrl('http://www.cda.org/Portals/0/journal/journal_102007.pdf', { openExternal:true });">Issue of CDA Journal from october 2007 dedicated to CAMBRA</a></p>
+			
 		</div>
 		
 		
@@ -1487,11 +1497,10 @@
 		
 		
 		<div data-role="content" data-theme="a">
-		
-			<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
-			<h4>Medical information disclaimer</h4>
-			<p class="clear"></p>
-			<hr />
+			<div class="info_naslov">
+				<img src="img/512icon.png" width="80px" alt="icon" class="float_l">
+				<h4>Medical information disclaimer</h4>
+			</div>
 
 			<p><strong>1. Credit</strong><p>1.1.This document was created using a template from <a href="#"onclick="navigator.app.loadUrl('http://www.seqlegal.com/', { openExternal:true });">SEQ Legal</a> (http://www.seqlegal.com).</p>
 
