toothpaste and refresh fix

--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
 				
 				<p class="clear"></p>
 				<ul  data-role="listview">
-					  <li id="time"  data-theme="a" class="emphasize wrap"><span>Next dental visit: not set.</span> </li>
+					  <li id="time"  data-theme="a" class="emphasize wrap"><span>Next dental visit not set</span> </li>
 
 				</ul>
 
@@ -198,7 +198,7 @@
 				<p id="timer">02:00</p>
 				<br />
 				<p>Press start button when ready to begin teeth brushing. The brushing should last at least 2 minutes, as timer indicates.</p>
-				<p id="tooth_paste">Use standard over-the-counter tooth paste or therapeutic paste if prescribed by your dentist.</p>
+				<p>Use standard over-the-counter tooth paste or therapeutic paste if prescribed by your dentist.</p>
 
 			</div>
 			
@@ -456,7 +456,6 @@
 			</ul>
 			<br />
 			<p class="redWhite">*Based on Caries Risk Assessment Form for Children Age 6 and Over/Adults.<br /> CAMBRA for Dental Providers (0-5) Assessment Tool is not included in this app.</p>
-		
 		</div>
 		
 
@@ -1399,7 +1398,7 @@
 			<p>This section should be filled by dentist after a clinical examination, eventual therapeutic procedures and decision which therapeutic agents should be prescribed to the patient.</p>
 			<ol>
 			<li><p>General data</p><p>Name, gender and age of patient.</p></li>
-			<li><p>Current status</p><p>Clinical findings related to dental caries ( disease indicators, risk and protective factors). If dental office is not equipped for conducting specific tests ( Streptococcus mutans or lactobacillus count, saliva tests etc) - fields for those tests should be left blank.</p><p>After entering these data the app will calculate the caries risk level for the patient and show it on the home screen. All three forms must be submitted or caries risk will not be calculated.</p><p>Caries risk level is calculated after this formula: <br />If any disease indicator is present - HIGH LEVEL.<br />If any disease indicator is present AND saliva flow is compromized - EXTREME LEVEL.<br />There are no disease indicators, greater number of risk factors than number of protective factors - HIGH RISK.<br />There are no disease indicators, equal number of risk and protective factors - MODERATE RISK.<br />There are no disease indicators, smaller number of risk factors than protective factors - LOW RISK.</p></li>
+			<li><p>Current status</p><p>Findings related to dental caries ( disease indicators, risk and protective factors).</p><p>After entering these data the app will calculate the caries risk level for the patient and show it on the home screen. All three forms must be submitted or caries risk level will not be calculated.</p><p>Caries risk level is calculated after this formula: <br />If any disease indicator is present - HIGH LEVEL.<br />If any disease indicator is present AND saliva flow is compromized - EXTREME LEVEL.<br />There are no disease indicators, greater number of risk factors than number of protective factors - HIGH RISK.<br />There are no disease indicators, equal number of risk and protective factors - MODERATE RISK.<br />There are no disease indicators, smaller number of risk factors than protective factors - LOW RISK.</p></li>
 			<li><p>Recommendations</p><p>This section has 3 parts:</p><p>A place to enter date of next appointment. It will appear on the home screen as a reminder.</p><p>List of therapeutics used in Caries Management By Risk Assessment protocol. Generic names and usage regimens are hard coded according to CAMBRA recommendations.</p><p>This is the section for prescriptions other than those listed under CAMBRA section. Tap "enter new" to enter name, directions and regimen (strict daily and monthly usage or when needed).</p><p>Entering the prescribed agents here will enable tracking - register buttons will appear on home screen. Prescriptions with "as needed" regimen are not tracked. Toothpaste usage (standard or therapeutic) is tracked together with brushing and does not have a separate register button.</p></li>
 			</ol>
 
