--- a/www/index.html
+++ b/www/index.html
@@ -1328,13 +1328,13 @@
 			</div>			
 			
 			<p>One of the goals of this app is to make you aware of two things :</p>
-			<ol>
-			<li>Dental caries is a preventable disease. If you strictly follow certain guidelines, depending on the situation, you may never again have new cavities.</li>
-			<li>Restoring cavities with fillings does not cure tooth decay, it is just a way to deal with its consequences. New cavities will eventually occur if the cause of the disease is not identified and dealt with.</li>
-			</ol>
-			<p>Caries Management by Risk Assessment (CAMBRA) is evidence-based approach in preventing and treating dental caries at the earliest stages. It is a methodology consisting of two phases :</p>
-			<p>The clinician conducts clinical examination and other required tests according to the caries risk assessment form, and after that, out of the gathered data - he calculates individual caries risk level (extreme, high, moderate or low).</p>
-			<p>According to the determined risk level the clinician crafts individual regimen of behavioral, chemical and minimally invasive procedures aimed at managing the risk.</p>
+
+			<p><strong>1. Dental caries is a preventable disease.</strong> If you strictly follow certain guidelines, depending on the situation, you may never again have new cavities.</p>
+			<p><strong>2. Restoring cavities with fillings does not cure tooth decay.</strong> It is just a way to deal with its consequences. New cavities will eventually occur if the cause of the disease is not identified and dealt with.</p>
+
+			<p><strong>Caries Management by Risk Assessment (CAMBRA)</strong> is evidence-based approach in preventing and treating dental caries at the earliest stages. It is a methodology consisting of two phases :</p>
+			<p><strong>1.</strong> The clinician conducts clinical examination and other required tests according to the caries risk assessment form, and after that, out of the gathered data - he calculates individual caries risk level (extreme, high, moderate or low).</p>
+			<p><strong>2.</strong> According to the determined risk level the clinician crafts individual regimen of behavioral, chemical and minimally invasive procedures aimed at managing the risk.</p>
 			<p>IntacTooth app has built-in option to calculate caries risk level. In order for this to happen the clinician must fill in all three forms under visit to dentist/current status. Also the therapeutics used in CAMBRA are listed under the recommendations tab. If the clinician decides to prescribe any of these, he should check it on the list. This way the patient will be reminded and the usage of the particular items will be tracked.</p>
 			<p>Please note that these therapeutics must not be used if not prescribed by a dentist. Listed dosages and regimens are for adult patients only; CAMBRA regimen for kids is not included in this app. </p>
 			<p>Refer to resources to learn more about CAMBRA.</p>
@@ -1368,36 +1368,35 @@
 				<h4>Application interface</h4>
 			</div>		
 			
-				<p><strong>Home screen</strong></p>
+				<p><strong>HOME SCREEN</strong></p>
 			<p>Home screen consists of following parts (from top to bottom):</p>
-			<ol>
-			<li><p>To do counter</p><p>Shows the number of all activities left to be done by the end of the day. It will become green when zero. Tap to enter the to do list where individual activities are listed, with their respective counters. Both the to do list and the to do counter are reset to starting values at the start of each new day (12:00 am).</p></li>
-			<li><p>Snack counter</p><p>Counts how many times you took food containing fermentable carbohydrates (i.e. sugars) that particular day. This counter is also reset to zero at the start of each new day (12:00 am). It becomes red when you register more than 3 snacks in a single day.</p></li>
-			<li><p>Caries risk level indicator</p><p>Indicates your current caries risk level. When the results of clinical examination and other tests are entered in forms under visit to dentist/current status the app will automatically calculate caries risk level.</p></li>
-			<li><p>Next dental visit</p><p>Info about scheduled next dental visit (appointments are scheduled under visit to dentist section).</p></li>
-			<li><p>Registration buttons</p><p>These buttons will help you track all of your activities related to dental caries and gum disease prevention. They are placed on the home screen for quick and easy access. You should press a button when the corresponding activity is taking place. (Press snack button when taking sugar-containing food for example. Press oral hygiene button when brushing or flossing etc.) This way you are registering the activity and the to do counter, to do list, adherence indicators and graphs will be automatically updated.</p></li>
-			</ol>
+
+			<p><strong>To do counter.</strong> Shows the number of all activities left to be done by the end of the day. It will become green when zero. Tap to enter the to do list where individual activities are listed, with their respective counters. Both the to do list and the to do counter are reset to starting values at the start of each new day (12:00 am).</p>
+			<p><strong>Snack counter.</strong> Counts how many times you took food containing fermentable carbohydrates (i.e. sugars) that particular day. This counter is also reset to zero at the start of each new day (12:00 am). It becomes red when you register more than 3 snacks in a single day.</p>
+			<p><strong>Caries risk level indicator.</strong> Indicates your current caries risk level. When the results of clinical examination and other tests are entered in forms under visit to dentist/current status the app will automatically calculate caries risk level.</p>
+			<p><strong>Next dental visit.</strong> Info about scheduled next dental visit (appointments are scheduled under visit to dentist section).</p>
+			<p><strong>Registration buttons.</strong> These buttons will help you track all of your activities related to dental caries and gum disease prevention. They are placed on the home screen for quick and easy access. You should press a button when the corresponding activity is taking place. (Press snack button when taking sugar-containing food for example. Press oral hygiene button when brushing or flossing etc.) This way you are registering the activity and the to do counter, to do list, adherence indicators and graphs will be automatically updated.</p>
+
 			<p>Snack and oral hygiene buttons are always present. If your dentist prescribe a therapeutic agent that has strict usage regimen - buttons for tracking it will also appear below.</p>
 
-			<p><strong>Profile screen</strong></p>
-			<ol>
-			<li><p>Current status</p><p>Your current dental status (caries risk level, currently active and treated caries lesions, risk and protective factors). This part will be updated after a clinical or other examination and findings entered in the corresponding fields in visit to the dentist/current status tab.</p></li>
-			<li><p>Therapy list</p><p>A summary of general preventive measures and specific therapeutic agents prescribed by your dentist (under visit to dentist/ recommendations tab).</p></li>
+			<p><strong>PROFILE SCREEN</strong></p>
+		
+			<p><strong>Current status.</strong> Your current dental status (caries risk level, currently active and treated caries lesions, risk and protective factors). This part will be updated after a clinical or other examination and findings entered in the corresponding fields in visit to the dentist/current status tab.</p>
+			<p><strong>Therapy list.</strong> A summary of general preventive measures and specific therapeutic agents prescribed by your dentist (under visit to dentist/ recommendations tab).</p>
 
-			<li><p>Adherence</p><p>Statistical data about your adherence to the caries and gum disease preventive regimen (dietary and oral hygiene habits and usage of prescribed therapeutic agents). Tapping each item opens graph where you are presented with tracking data for that item from the last ten days. The refresh button clears data and starts new tracking.</p><p>Eating and oral hygiene habits are always tracked. Specific therapeutic agents are tracked only if entered under visit to dentist/recommendations forms. Some items are supposed to be used only a few days in a month and they are tracked only during this period. Other days in month registration buttons for these items will not be present.</p></li>
-			<li><p>Visit to dentist button</p>
-			<p>Should be tapped when visiting dentist. Opens the visit to dentist screen.</p></li>
-			</ol>
+			<p><strong>Adherence.</strong> Statistical data about your adherence to the caries and gum disease preventive regimen (dietary and oral hygiene habits and usage of prescribed therapeutic agents). Tapping each item opens graph where you are presented with tracking data for that item from the last ten days. The refresh button clears data and starts new tracking.</p><p>Eating and oral hygiene habits are always tracked. Specific therapeutic agents are tracked only if entered under visit to dentist/recommendations forms. Some items are supposed to be used only a few days in a month and they are tracked only during this period. Other days in month registration buttons for these items will not be present.</p>
+			<p><strong>Visit to dentist button.</strong> Should be tapped when visiting dentist. Opens the visit to dentist screen.</p>
+		
 
-			<p><strong>Visit to dentist screen</strong></p>
+			<p><strong>VISIT TO DENTIST SCREEN</strong></p>
 			<p>This section should be filled by dentist after a clinical examination, eventual therapeutic procedures and decision which therapeutic agents should be prescribed to the patient.</p>
-			<ol>
-			<li><p>General data</p><p>Name, gender and age of patient.</p></li>
-			<li><p>Current status</p><p>Findings related to dental caries ( disease indicators, risk and protective factors).</p><p>After entering these data the app will calculate the caries risk level for the patient and show it on the home screen. All three forms must be submitted or caries risk level will not be calculated.</p><p>Caries risk level is calculated after this formula: <br />If any disease indicator is present - HIGH LEVEL.<br />If any disease indicator is present AND saliva flow is compromised - EXTREME LEVEL.<br />There are no disease indicators, greater number of risk factors than number of protective factors - HIGH RISK.<br />There are no disease indicators, equal number of risk and protective factors - MODERATE RISK.<br />There are no disease indicators, smaller number of risk factors than protective factors - LOW RISK.</p></li>
-			<li><p>Recommendations</p><p>This section has 3 parts:</p><p>A place to enter date of next appointment. It will appear on the home screen as a reminder.</p><p>List of therapeutics used in Caries Management By Risk Assessment protocol. Generic names and usage regimens are hard coded according to CAMBRA recommendations.</p><p>This is the section for prescriptions other than those listed under CAMBRA section. Tap "enter new" to enter name, directions and regimen (strict daily and monthly usage or when needed).</p><p>Entering the prescribed agents here will enable tracking - register buttons will appear on home screen. Prescriptions with "as needed" regimen are not tracked. Toothpaste usage (standard or therapeutic) is tracked together with brushing and does not have a separate register button.</p></li>
-			</ol>
+		
+			<p><strong>General data.</strong> Name, gender and age of patient.</p>
+			<p><strong>Current status.</strong> Findings related to dental caries ( disease indicators, risk and protective factors).</p><p>After entering these data the app will calculate the caries risk level for the patient and show it on the home screen. All three forms must be submitted or caries risk level will not be calculated.</p><p>Caries risk level is calculated after this formula: <br />If any disease indicator is present - HIGH LEVEL.<br />If any disease indicator is present AND saliva flow is compromised - EXTREME LEVEL.<br />There are no disease indicators, greater number of risk factors than number of protective factors - HIGH RISK.<br />There are no disease indicators, equal number of risk and protective factors - MODERATE RISK.<br />There are no disease indicators, smaller number of risk factors than protective factors - LOW RISK.</p>
+			<p><strong>Recommendations.</strong> This section has 3 parts:</p><p>1. A place to enter date of next appointment. It will appear on the home screen as a reminder.</p><p>2. List of therapeutics used in Caries Management By Risk Assessment protocol. Generic names and usage regimens are hard coded according to CAMBRA recommendations.</p><p>3. The section for prescriptions other than those listed under CAMBRA section. Tap "enter new" to enter name, directions and regimen (strict daily and monthly usage or when needed).</p><p>Entering the prescribed agents here will enable tracking - register buttons will appear on home screen. Prescriptions with "as needed" regimen are not tracked. Toothpaste usage (standard or therapeutic) is tracked together with brushing and does not have a separate register button.</p>
+			
 
-			<p><strong>Settings screen</strong></p>
+			<p><strong>SETTINGS SCREEN</strong></p>
 			<p>The 'reset all' button, deletes all stored data.</p>
 						
 
