--- a/www/index.html
+++ b/www/index.html
@@ -1274,31 +1274,37 @@
 			</div>				
 		
 		<p>Both diseases have multifaceted causes and explaining everything is beyond the scope of these instructions.We do strongly recommend that you use the resources we have provided to learn more.</p>
-			<p>Terms:</p>
-			<ol>
-			<li>Dental caries (tooth decay) &ndash; disease caused by oral bacteria. These bacteria feed on fermentable carbohydrates from our diet and produce acids as a waste product. Acids then travel into the tooth and dissolve the carbonated hydroxyapatite mineral. If this process is not halted &ndash; cavity is formed. Note that cavity is not synonym for dental caries. It is just later, irreversible phase of the disease.</li>
-			<li>Gum disease (periodontal disease) - It is a disease that affects tooth-supporting structures (i.e. alveolar bone, periodontal ligament, cementum and gingiva). While there are many diseases that affect these structures by far the most common cause is plaque-induced inflammation.The disease starts with an inflammation of the gums which will become swollen and bleed when the person is brushing his/her teeth. If this gingivitis lasts long it can turn into periodontal disease which is characterized by the destruction of alveolar bone and the periodontal ligament.The disease usually develops painlessly (except for acute exacerbations at a later stage) and gum bleeding and bad breath may be the only thing the patient notices. Other symptoms include tooth sensitivity, receding gums and painful chewing. Eventually teeth become loose.</li>
-			</ol>
-			<p>Prevention</p>
+			<p><strong>Terms:</strong></p>
+
+			<p><strong>Dental caries (tooth decay)</strong> is a disease of the hard tissues of the teeth caused by oral bacteria. These bacteria feed on fermentable carbohydrates from our diet and produce acids as a waste product. Acids then travel into the tooth and dissolve the carbonated hydroxyapatite mineral. If this process is not halted &ndash; cavity is formed. Note that cavity is not synonym for dental caries. It is just later, irreversible phase of the disease.</p>
+			<p><strong>Gum disease (periodontal disease)</strong> is a disease that affects tooth-supporting structures (i.e. alveolar bone, periodontal ligament, cementum and gingiva). While there are many diseases that affect these structures by far the most common cause is plaque-induced inflammation.The disease starts with an inflammation of the gums which will become swollen and bleed when the person is brushing his/her teeth. If this gingivitis lasts long it can turn into periodontal disease which is characterized by the destruction of alveolar bone and the periodontal ligament.The disease usually develops painlessly (except for acute exacerbations at a later stage) and gum bleeding and bad breath may be the only thing the patient notices. Other symptoms include tooth sensitivity, receding gums and painful chewing. Eventually teeth become loose.</p>
+
+			<p><strong>Prevention</strong></p>
 			<p>Here is a list of the things you should take care of to keep your teeth and gums healthy:</p>
-			<ol>
-				<li><p><b>Eating Habits</b></p>Consumption of food containing fermentable carbohydrates (sucrose, glucose, fructose and cooked starch) is the single most important factor related to dental caries. Note that the frequency of taking these foods is what is important - not the amount (the most dangerous, is frequent snacking and drinking sweet drinks over a long period of time). You should reduce the frequency of eating sweets as much as possible and rinse your mouth with water or chew sugar free gum after.</li>
-				<li><p><b>Oral Hygiene</b></p><p>Oral hygiene is important in prevention of both periodontal disease and dental caries.Brush your teeth twice a day - after breakfast and before bedtime. Use over-the-counter toothpaste containing fluoride or a therapeutic paste if prescribed by your dentist. Brushing should last at least 2 minutes. Floss once daily before brushing. Use floss or interdental brush.</p>
+
+				<p><strong>1. Eating Habits</strong></p><p>Consumption of food containing fermentable carbohydrates (sucrose, glucose, fructose and cooked starch) is the single most important factor related to dental caries. Note that the frequency of taking these foods is what is important - not the amount (the most dangerous, is frequent snacking and drinking sweet drinks over a long period of time). You should reduce the frequency of eating sweets as much as possible and rinse your mouth with water or chew sugar free gum after.</p>
+				<p><strong>2. Oral Hygiene</strong></p><p>Oral hygiene is important in prevention of both periodontal disease and dental caries. Brush your teeth twice a day - after breakfast and before bedtime. Use over-the-counter toothpaste containing fluoride or a therapeutic paste if prescribed by your dentist. Brushing should last at least 2 minutes. Floss once daily before brushing with floss or use interdental brush.</p>
 				<p>Even if you adhere to these guidelines it will not help you that much if your brushing technique is bad or if you use the wrong brush or floss. &nbsp;Invest some time to learn about the best brushing and flossing technique, it will pay off many times over. Your dentist should also train you how you can maintain good oral hygiene.</p>
-				<p>By brushing and flossing you will remove food remnants and more importantly - dental plaque. Plaque is the biofilm formed by oral microorganisms. It is the major cause of both dental caries and gingivitis/periodontal disease. If it is not removed every day, plaque matures and eventually turns into tartar which can be removed only by in-office procedures.</p></li>
-				<li><p><b>Regular dental checkups</b></p><p>
-				<p>This is important for several reasons :</p>
-				<ol>
-					<li>Dentist will evaluate health of your teeth and  gums. Other oral tissues and head and neck structures will also be examined.</li>
-					<li>Your overall caries risk level should also be evaluated. Once evaluated, it will guide dentist in how to deal with it, which therapeutics and regimen to prescribe. Good oral hygiene, and refraining from eating sweets are not enough in cases of high or extreme caries risk.</li>
-					<li>These visits include professional dental cleaning and tartar removal.</li>
-					<li>One part of the checkup is dedicated to examination of the periodontal structure. It includes an evaluation of plaque level, gums, depth of periodontal pockets, bone structure and risk factors. There are a variety of treatments for gum disease depending on the stage. Treatments range from nonsurgical therapies that control bacterial growth to surgery to restore supportive tissues.</li>
-					<li>Smoking cessation. Tobacco helps progression of periodontal disease.</li>
-					<li><p>There are other factors that might influence caries or periodontal disease progression, such as dysfunctional saliva flow, individual predisposition etc.</p>
+				<p>By brushing and flossing you will remove food remnants and more importantly - dental plaque. Plaque is the biofilm formed by oral microorganisms. It is the major cause of both dental caries and gingivitis/periodontal disease. If it is not removed every day, plaque matures and eventually turns into tartar which can be removed only by in-office procedures.</p>
+				<p><strong>3. Regular dental checkups</strong></p>
+				<p>This is important for several reasons :<br />
+				
+					- Dentist will evaluate health of your teeth and  gums. Other oral tissues and head and neck structures will also be examined.<br />
+					- Your overall caries risk level should also be evaluated. Once evaluated, it will guide dentist in how to deal with it, which therapeutics and regimen to prescribe. Good oral hygiene, and refraining from eating sweets are not enough in cases of high or extreme caries risk.<br />
+					- These visits include professional dental cleaning and tartar removal.<br />
+					- One part of the checkup is dedicated to examination of the periodontal structure. It includes an evaluation of plaque level, gums, depth of periodontal pockets, bone structure and risk factors. There are a variety of treatments for gum disease depending on the stage. Treatments range from nonsurgical therapies that control bacterial growth to surgery to restore supportive tissues.<br />
+					- There are a range of very powerful in-office prophylactic measures that can be included in your caries prevention regimen (application of fluoride varnish or fissure sealant for example). Dentist will also teach you how to brush and floss.<br />
+					- The dentist will treat your new cavities and other conditions that require treatment. If you visit the dentist regularly, cavities, if present, will be treated early on and will not require extensive restorations or root canal therapy.<br />
+					- MAINTAINING GOOD ORAL HYGIENE, EATING HABITS, AND USING THIS APP ARE NOT A REPLACEMENT FOR REGULAR VISITS TO THE DENTIST. Dental caries and periodontal disease have multifactorial etiology and there are cases that quickly progress and may have serious health  consequences if not treated professionally. Also these two diseases are not the only problems that are found in the mouth. There are other, sometimes very serious oral diseases (oral cancer for example) where early diagnosis is crucial for the outcome of the treatement. There are also some other systemic diseases that show the first symptoms in the mouth.</p>
+
+					<p><strong>4. Smoking cessation<strong></p><p> Tobacco helps progression of periodontal disease.</p>
+					
+					<p><strong>5. Other factors</strong></p>
+					<p>There are other factors that might influence caries or periodontal disease progression, such as dysfunctional saliva flow, individual predisposition etc.</p>
 					<p>Saliva has several functions many of which are related to the health of teeth and gums. Because of this if salivary function is compromised for any reason and cavity disease indicators are present, the patient is automatically placed in extreme cavity risk category and treated accordingly. Saliva flow is reduced in cases of radiation of head and neck, taking some anxiolytics and antidepressants, in some illnesses such as Sj&ouml;gren's syndrome.</p>
-					<p>People with diseases that weaken immune system (stress, diabetes, AIDS, leukemia) are at special risk for periodontal disease.</p></li>
-				</ol>
-			</ol>
+					<p>People with diseases that weaken immune system (stress, diabetes, AIDS, leukemia) are at special risk for periodontal disease.</p>
+			
+
 		</div>
 
 		
