--- a/www/index.html
+++ b/www/index.html
@@ -1273,7 +1273,7 @@
 				<h4>Dental caries and gum disease prevention</h4>
 			</div>				
 		
-		<p>Both diseases have multifaceted causes and explaining everything is beyond the scope of these instructions.We do strongly recommend that you use the resources we have provided to learn more.</p>
+			<p>Both diseases have multifaceted causes and explaining everything is beyond the scope of these instructions.We do strongly recommend that you use the resources we have provided to learn more.</p>
 			<p><strong>Terms:</strong></p>
 
 			<p><strong>Dental caries (tooth decay)</strong> is a disease of the hard tissues of the teeth caused by oral bacteria. These bacteria feed on fermentable carbohydrates from our diet and produce acids as a waste product. Acids then travel into the tooth and dissolve the carbonated hydroxyapatite mineral. If this process is not halted &ndash; cavity is formed. Note that cavity is not synonym for dental caries. It is just later, irreversible phase of the disease.</p>
@@ -1282,8 +1282,10 @@
 			<p><strong>Prevention</strong></p>
 			<p>Here is a list of the things you should take care of to keep your teeth and gums healthy:</p>
 
-				<p><strong>1. Eating Habits</strong></p><p>Consumption of food containing fermentable carbohydrates (sucrose, glucose, fructose and cooked starch) is the single most important factor related to dental caries. Note that the frequency of taking these foods is what is important - not the amount (the most dangerous, is frequent snacking and drinking sweet drinks over a long period of time). You should reduce the frequency of eating sweets as much as possible and rinse your mouth with water or chew sugar free gum after.</p>
-				<p><strong>2. Oral Hygiene</strong></p><p>Oral hygiene is important in prevention of both periodontal disease and dental caries. Brush your teeth twice a day - after breakfast and before bedtime. Use over-the-counter toothpaste containing fluoride or a therapeutic paste if prescribed by your dentist. Brushing should last at least 2 minutes. Floss once daily before brushing with floss or use interdental brush.</p>
+				<p><strong>1. Eating Habits</strong></p>
+				<p>Consumption of food containing fermentable carbohydrates (sucrose, glucose, fructose and cooked starch) is the single most important factor related to dental caries. Note that the frequency of taking these foods is what is important - not the amount (the most dangerous, is frequent snacking and drinking sweet drinks over a long period of time). You should reduce the frequency of eating sweets as much as possible and rinse your mouth with water or chew sugar free gum after.</p>
+				<p><strong>2. Oral Hygiene</strong></p>
+				<p>Oral hygiene is important in prevention of both periodontal disease and dental caries. Brush your teeth twice a day - after breakfast and before bedtime. Use over-the-counter toothpaste containing fluoride or a therapeutic paste if prescribed by your dentist. Brushing should last at least 2 minutes. Floss once daily before brushing with floss or use interdental brush.</p>
 				<p>Even if you adhere to these guidelines it will not help you that much if your brushing technique is bad or if you use the wrong brush or floss. &nbsp;Invest some time to learn about the best brushing and flossing technique, it will pay off many times over. Your dentist should also train you how you can maintain good oral hygiene.</p>
 				<p>By brushing and flossing you will remove food remnants and more importantly - dental plaque. Plaque is the biofilm formed by oral microorganisms. It is the major cause of both dental caries and gingivitis/periodontal disease. If it is not removed every day, plaque matures and eventually turns into tartar which can be removed only by in-office procedures.</p>
 				<p><strong>3. Regular dental checkups</strong></p>
@@ -1297,7 +1299,7 @@
 					- The dentist will treat your new cavities and other conditions that require treatment. If you visit the dentist regularly, cavities, if present, will be treated early on and will not require extensive restorations or root canal therapy.<br />
 					- MAINTAINING GOOD ORAL HYGIENE, EATING HABITS, AND USING THIS APP ARE NOT A REPLACEMENT FOR REGULAR VISITS TO THE DENTIST. Dental caries and periodontal disease have multifactorial etiology and there are cases that quickly progress and may have serious health  consequences if not treated professionally. Also these two diseases are not the only problems that are found in the mouth. There are other, sometimes very serious oral diseases (oral cancer for example) where early diagnosis is crucial for the outcome of the treatement. There are also some other systemic diseases that show the first symptoms in the mouth.</p>
 
-					<p><strong>4. Smoking cessation<strong></p><p> Tobacco helps progression of periodontal disease.</p>
+					<p><strong>4. Smoking cessation</strong></p><p> Tobacco helps progression of periodontal disease.</p>
 					
 					<p><strong>5. Other factors</strong></p>
 					<p>There are other factors that might influence caries or periodontal disease progression, such as dysfunctional saliva flow, individual predisposition etc.</p>
