--- a/www/index.html
+++ b/www/index.html
@@ -1197,7 +1197,7 @@
 		
 		<div data-role="content" data-theme="a">
 		
-	<ul data-role="listview" >
+			<ul data-role="listview" >
 				<li><a href="#info_about" class="wrap">About IntacTooth app</a></li>
 				<li><a href="#info_prevention" class="wrap">Dental caries and gum disease</a></li>
 				<li><a href="#info_cambra" class="wrap">Caries management by risk assessment</a></li>
@@ -1256,6 +1256,7 @@
 					  <li><a href="#info" data-icon="info" class="ui-btn-active ui-state-persist" >Info</a></li>
 					  <li><a href="#settings" data-icon="gear">Settings</a></li>
 					</ul>
+			</div>
 		</div>
 	</section>
 
@@ -1318,6 +1319,7 @@
 					  <li><a href="#info" data-icon="info" class="ui-btn-active ui-state-persist" >Info</a></li>
 					  <li><a href="#settings" data-icon="gear">Settings</a></li>
 					</ul>
+				</div>
 		</div>
 	</section>
 
@@ -1358,6 +1360,7 @@
 					  <li><a href="#info" data-icon="info" class="ui-btn-active ui-state-persist" >Info</a></li>
 					  <li><a href="#settings" data-icon="gear">Settings</a></li>
 					</ul>
+				</div>
 		</div>
 	</section>
 
@@ -1418,6 +1421,7 @@
 					  <li><a href="#info" data-icon="info" class="ui-btn-active ui-state-persist" >Info</a></li>
 					  <li><a href="#settings" data-icon="gear">Settings</a></li>
 					</ul>
+			</div>
 		</div>
 	</section>
 
@@ -1452,6 +1456,7 @@
 					  <li><a href="#info" data-icon="info" class="ui-btn-active ui-state-persist" >Info</a></li>
 					  <li><a href="#settings" data-icon="gear">Settings</a></li>
 					</ul>
+				</div>
 		</div>
 	</section>
 
