--- a/www/index.html
+++ b/www/index.html
@@ -79,7 +79,7 @@
 			<div id="registrationButtons">
 
 				<a href="#"  data-role="button" id="snack_registration_button" data-theme="d" onclick="registration('snack')">Snack</a>				
-				<a href="#oral_hygiene" data-role="button" data-theme="d">Oral hygiene</a>	
+				<a href="#oral_hygiene" data-role="button" data-theme="d" onclick="window.plugins.toast.showLongTop('enter oral hygiene');">Oral hygiene</a>	
 				
 				<div id="other_registration_buttons"></div>
 				
